test_suite5/ALAN/test_suite/alan-2022-examples/failing/006060_mutation.alan
source B2 begin leave 6 = 02 and end
